<?xml version="1.0"?>
<package format="2">
  <name>sample</name>
  <version>0.0.0</version>
  <description>The sample package</description>
  <maintainer email="angel.j.avila@gmail.com">Angel Avila</maintainer>
  <license>GPLv3</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>Qt5Widgets</depend>
  <depend>Qt5PrintSupport</depend>
  <depend>Qt5Core</depend>
  <depend>QCustomPlot</depend>
</package>
